feat: update reset password email

--- a/server/extensions/templates/password-reset.liquid
+++ b/server/extensions/templates/password-reset.liquid
@@ -1,11 +1,11 @@
 {% layout "base" %} {% block content %}
 
-<h1>Reset your {{url}} password</h1>
+<h1>Reset your account password</h1>
 
-<p style="padding-bottom: 30px">
-Do you really want to do this?
+<p>Hi there, you requested to change your password on our platform, here is a ink to reset your password below</p>
+<p>
+  <a href={{url}} target="_blank" rel="noopener noreferrer">Reset my password</a>
 </p>
-
 
 
 <p style="padding-top: 30px">Important: This link will expire in 24 hours.</p>
